--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
           
           <p>
           <br><b>E-mail</b>:
-            <br><a href="mailto:younghyeonjeon1@mgil">younghyeonjeon1[at]gmail.com</a>
+            <br><a href="mailto:yjeon1@ufl.edu">yjeon1[at]ufl.edu</a>
             
         <br>        
         <br><b>Links</b>:
